fixed overflow issue

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,6 +15,7 @@ body,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   min-width: 100vw !important;
   min-height: 100vh !important;
+  overflow-x: hidden !important;
 }
 
 a {
